--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "a170828 <acalvoe@externos.bankia.com>",
   "license": "MIT",
   "dependencies": {
-    "nodemon": "^1.11.0",
+    "browser-sync": "^2.18.13",
     "rxjs": "^5.4.3"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "browser-sync start -s ./ -f index.html index.js"
   }
 }
